Added Redux and rxjs to simulate observable props.

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
 <template>
- <require from="components/todo/TodoList"></require>
-  <todo-list></todo-list>
+  <require from="components/todo/TodoListContainer"></require>
+  <todo-list-container></todo-list-container>
 </template>
